--- a/app/src/main/res/layout/child_fragment_home_w_opened.xml
+++ b/app/src/main/res/layout/child_fragment_home_w_opened.xml
@@ -263,7 +263,7 @@
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="27sp"
-                tools:text="16:56"
+                android:text="     "
                 android:textColor="#242424"
                 android:textSize="30sp"
                 android:textStyle="normal" />
