--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -269,9 +269,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1.0"
+                android:text="1.0.2"
                 android:textSize="16sp"
-                android:textColor="#a3a3a3"
+                android:textColor="#333333"
                 android:letterSpacing="-0.03"
                 android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
