--- a/app/src/main/res/layout/dialog_fragment_24_hour.xml
+++ b/app/src/main/res/layout/dialog_fragment_24_hour.xml
@@ -141,7 +141,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="6dp"
-                    android:text="오픈시간"
+                    android:text="마감시간"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/tv_close_hour"
                     app:layout_constraintStart_toStartOf="parent"
@@ -169,6 +169,7 @@
             android:textSize="12sp"
             android:textColor="@color/text2_a3a3a3"
             android:letterSpacing="-0.03"
+            android:gravity="end"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ll_running_time"
             app:layout_constraintEnd_toEndOf="@id/ll_running_time"
