--- a/app/src/main/res/layout/item_rv_running_time.xml
+++ b/app/src/main/res/layout/item_rv_running_time.xml
@@ -110,6 +110,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:text="00:00"
+                android:textColor="@color/gray6_cecece"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_open_txt"
@@ -137,7 +138,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
-                android:text="오픈시간"
+                android:text="마감시간"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/tv_close_hour"
                 app:layout_constraintStart_toStartOf="parent"
@@ -149,6 +150,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:text="00:00"
+                android:textColor="@color/gray6_cecece"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_close_txt"
@@ -166,6 +168,7 @@
         android:textColor="@color/text2_a3a3a3"
         android:letterSpacing="-0.03"
         android:layout_marginBottom="17dp"
+        android:gravity="end"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ll_running_time"
         app:layout_constraintEnd_toEndOf="@id/ll_running_time"
