--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,80 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".src.login.LoginActivity">
 
     <ImageButton
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_back_arrow"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="16dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="알바집 로그인"
-        android:textSize="24sp"
-        android:layout_marginTop="68dp"
         android:layout_marginStart="36dp"
+        android:layout_marginTop="68dp"
         android:fontFamily="@font/roboto_bold_otf"
-        android:textStyle="bold"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="9sp"
+        android:text="알바집 로그인"
         android:textColor="@color/customBlack"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="전화번호"
-        android:textStyle="normal"
-        android:textSize="16sp"
-        android:textColor="#6f6f6f"
+        android:layout_marginTop="36dp"
+        android:fontFamily="@font/roboto_medium_otf"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
-        android:fontFamily="@font/roboto_medium_otf"
+        android:text="전화번호"
+        android:textColor="#6f6f6f"
+        android:textSize="16sp"
+        android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
-        android:layout_marginTop="36dp"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
     <RelativeLayout
         android:id="@+id/rl_phone_input"
         android:layout_width="0dp"
         android:layout_height="48dp"
+        android:layout_marginHorizontal="36dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/rectangle_custom_white_radius"
-        android:layout_marginHorizontal="36dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_phone"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/tv_phone">
 
         <EditText
             android:id="@+id/et_input_phone"
+            style="@style/EditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            style="@style/EditTextStyle"
-            android:background="@null"
-            android:singleLine="true"
-            android:maxLength="13"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_alignParentEnd="true"
-            android:inputType="number"
+            android:background="@null"
             android:hint="-없이 번호 입력"
+            android:imeOptions="actionDone"
+            android:inputType="number"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
+            android:maxLength="13"
+            android:singleLine="true"
             android:textColor="@color/customBlack"
             android:textColorHint="#c8c8c8"
             android:textSize="16sp"
@@ -86,39 +87,40 @@
         android:id="@+id/tv_pw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="비밀번호"
-        android:textStyle="normal"
-        android:textSize="16sp"
-        android:textColor="#6f6f6f"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/roboto_medium_otf"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
-        android:fontFamily="@font/roboto_medium_otf"
+        android:text="비밀번호"
+        android:textColor="#6f6f6f"
+        android:textSize="16sp"
+        android:textStyle="normal"
         app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/rl_phone_input"
-        android:layout_marginTop="24dp"/>
+        app:layout_constraintTop_toBottomOf="@id/rl_phone_input" />
 
     <RelativeLayout
         android:id="@+id/rl_pw"
         android:layout_width="0dp"
         android:layout_height="48dp"
+        android:layout_marginHorizontal="36dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/rectangle_custom_white_radius"
-        android:layout_marginHorizontal="36dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_pw"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/tv_pw">
 
         <EditText
             android:id="@+id/et_pw"
+            style="@style/EditTextStyle"
             android:layout_width="200dp"
             android:layout_height="20dp"
-            android:layout_centerVertical="true"
-            android:layout_marginHorizontal="16dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginHorizontal="16dp"
             android:background="@null"
-            style="@style/EditTextStyle"
             android:hint="비밀번호"
+            android:imeOptions="actionDone"
             android:inputType="textPassword"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
@@ -148,28 +150,28 @@
         android:id="@+id/btn_next"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="로그인"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/btn_disable_yellow_fill_rounded"
-        android:textColor="@color/hintTxtColor"
-        android:stateListAnimator="@null"
-        android:textStyle="bold"
-        android:textSize="16sp"
         android:enabled="false"
         android:fontFamily="@font/roboto_bold_otf"
-        android:layout_marginBottom="24dp"
-        android:layout_marginHorizontal="24dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:stateListAnimator="@null"
+        android:text="로그인"
+        android:textColor="@color/hintTxtColor"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <FrameLayout
         android:id="@+id/frame_layout_change_pw"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
